[gd_scene load_steps=8 format=2]

[ext_resource path="res://img/ship_status_display.png" type="Texture" id=1]
[ext_resource path="res://img/ship_right_wing.png" type="Texture" id=2]
[ext_resource path="res://img/ship_status_outline.png" type="Texture" id=3]
[ext_resource path="res://img/text_ship_status.png" type="Texture" id=4]
[ext_resource path="res://img/ship_left_wing.png" type="Texture" id=5]
[ext_resource path="res://img/ship_body.png" type="Texture" id=6]
[ext_resource path="res://StatusDisplay.gd" type="Script" id=7]

[node name="StatusDisplay" type="Node2D"]
script = ExtResource( 7 )

[node name="ship_status_display" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 825.682, 168.516 )
texture = ExtResource( 1 )

[node name="ship_status_outline" type="Sprite" parent="."]
self_modulate = Color( 0.701961, 0.741176, 0.807843, 1 )
position = Vector2( 825.333, 169.35 )
texture = ExtResource( 3 )

[node name="ship_left_wing" type="Sprite" parent="."]
self_modulate = Color( 0.701961, 0.741176, 0.807843, 1 )
position = Vector2( 759.005, 191.958 )
scale = Vector2( 1.03238, 1 )
texture = ExtResource( 5 )

[node name="ship_right_wing" type="Sprite" parent="."]
self_modulate = Color( 0.701961, 0.741176, 0.807843, 1 )
position = Vector2( 891.91, 192.458 )
texture = ExtResource( 2 )

[node name="ship_body" type="Sprite" parent="."]
self_modulate = Color( 0.701961, 0.741176, 0.807843, 1 )
position = Vector2( 825.668, 160.841 )
texture = ExtResource( 6 )

[node name="text_ship_status" type="Sprite" parent="."]
self_modulate = Color( 0.701961, 0.741176, 0.807843, 1 )
position = Vector2( 832.663, 54.1626 )
texture = ExtResource( 4 )
